--- a/public/2Q1QuizBerylliumDUmlao.html
+++ b/public/2Q1QuizBerylliumDUmlao.html
@@ -53,8 +53,34 @@
         list-style-type: none; /* to remove the bullets*/
         clear: left; /* to remove the effect of float:left */}
 
+        /*H*/
+        a[target=_blank]{
+          color: darkblue; 
+        }
 
+        a[href="/internal-page"]{
+          color: blue;
+        }
+        /*I*/
+        a:hover{
+          font-size: large;
+        }
 
+        /* extra CSS */
+          .container ul {
+            list-style-type: none; /* removes bullets */
+            clear: left; /* removes effect of float:left */
+            padding: 0; /* removes the spaces surrounding the li/s */
+            }
+
+          .container ul li {
+            width: 150px;
+            padding: 5px;
+            background-color: cornsilk;
+            text-align: center;
+            display: inline-block;
+            border-radius: 0px 25px;
+            }
   </style>
 </head>
 <body>
